2006-10-16  Akim Demaille  <demaille@gostai.com>

	Tidy liburbi-c++.
	* lib/jpeg-6bL: Move to...
	* jpeg-6b: here.
	Spares time at configure and make time.
	* configure.ac: Create a config.h.
	Currently, it is not used anywhere.  When it is, one will have
	to add a -I $(top_builddir)/src to find it.
	BTW, this fixes the warnings in jpeg-6b, since we no longer
	mix our HAVE_* with its.
	* Makefile.am: Adjust.

2006-10-15  Akim Demaille  <akim.demaille@free.fr>

	Kill warnings.
	* src/liburbi/ufloat.h: Do that.
	* src/liburbi/uclient.cpp: Idem.
	* src/liburbi/uabstractclient.cpp: Idem.
	* src/liburbi/uobject/uobject.template.h: Idem.
	* src/liburbi/uobject/common_uvalue.cc: Idem.
	* src/liburbi/uconversion.cpp: Idem.
	* src/examples/urbiimage.cpp: Idem.
	* src/examples/urbisendsound.cpp: Idem.
	* src/examples/urbitalkie.cpp: Idem.
	* src/examples/urbimirror.cpp: Idem.
	* src/examples/urbirecord.cpp: Idem.
	* src/examples/urbiping.cpp: Idem.
	* configure.ac: Disable -Weffc++.

2006-10-12  matthieu nottale  <nottale@gostai.com>

	r193: Windows compatibility fix.

	* sdk/Makefile.am: Remove libuobject.la from dependancies.
	* sdk/uinstall: Replace test x == y by test x = y.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	--disable-examples.
	* configure.ac: Simplify/clarify the use of --disable-examples.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	pin baux.

	* Makefile.am: Include build-aux.mk.

2006-10-08  JC Baillie  <baillie@gostai.com>

	compile warning fix 

	* src/liburbi/uobject/common_uvalue.cc: remove a compile warning.

2006-10-08  Matthieu Nottale  <nottale@gostai.com>

	Fix empty object parsing

	* src/liburbi/uobject/common_uvalue.cc: Fix parser for empty objects.

2006-10-04  matthieu nottale  <nottale@gostai.com>

	Add --disable-examples and a few extras

	* src/liburbi/uobject/uobject.cc: Add missing std:: before cout/endl.
	* src/Makefile.am: conditionaly add examples and utils to SUBDIRS.